# productforge

./: .gitignore  pyproject.toml
examples/: white-space-workbook.json
src/productforge/: __init__.py
src/productforge/engine/: __init__.py  builder.py  context.py  fonts.py  models.py
src/productforge/engine/renderers/: __init__.py  chapter.py  cover.py  cta.py  letter.py  prompt.py  section.py  toc.py  writing.py
src/productforge/presets/: bold.json  brutalist.json  clean.json  editorial.json  warm.json
src/productforge/web/: __init__.py  app.py  routes.py
src/productforge/web/static/: app.js  style.css
src/productforge/web/templates/: index.html
tests/: test_builder.py  test_renderers.py
